fix(footer): improve footer mobile spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -274,6 +274,6 @@ body {
 
 @media (max-width: 767px) {
   body {
-    padding-bottom: calc(env(safe-area-inset-bottom) + 6.5rem);
+    padding-bottom: calc(env(safe-area-inset-bottom) + 7.5rem);
   }
 }
